# atp-platform

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  00_setup_deps.command  10_run_el_farol.command  11_run_el_farol_verbose.command  20_run_prisoners_dilemma.command  21_run_auction.command  30_run_all_games.command  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  TODO.md  TOURNAMENT_CREATION_API.md  TROUBLESHOOTING.md  action.yml  alembic.ini  atp.config.yaml  atp_dashboard.db  atp_local.db  docker-compose.yml  executor.config.yaml  executor.py  main.py  pyproject.toml  task.py  tools_list.json
.github/: CODEOWNERS  dependabot.yml
action/: entrypoint.sh
art/: game-theory-guide.md  game_results.md  how-to-run-test.md  test_results.md
atp/: __init__.py  adapters  analytics  chaos  core  cost  dashboard  loader  model_catalog  protocol  scoring  statistics  streaming
atp-games/: README.md  coverage.json  pyproject.toml
atp-games/atp_games/: __init__.py  models.py  plugin.py
atp-games/atp_games/evaluators/: __init__.py  cooperation_evaluator.py  equilibrium_evaluator.py  exploitability_evaluator.py  fairness_evaluator.py  payoff_evaluator.py
atp-games/atp_games/mapping/: __init__.py  action_mapper.py  observation_mapper.py
atp-games/atp_games/rating/: __init__.py  elo.py
atp-games/atp_games/runner/: __init__.py  action_validator.py  builtin_adapter.py  game_runner.py
atp-games/atp_games/suites/: __init__.py  alympics.py  cross_play.py  game_suite_loader.py  models.py  schema.py  stress_test.py  tournament.py
atp-games/atp_games/suites/builtin/: alympics_lite.yaml  auction_battery.yaml  prisoners_dilemma.yaml  public_goods.yaml
atp-games/docs/: scoring-rubric.md
atp-games/tests/: test_action_mapper.py  test_action_validator.py  test_agent_record.py  test_alympics.py  test_builtin_adapter.py  test_cooperation_evaluator.py  test_cross_play.py  test_el_farol_action_space.py  test_el_farol_config.py  test_el_farol_interval_agents.py  test_elo.py  test_equilibrium_evaluator.py  test_exploitability_evaluator.py  test_fairness_evaluator.py  test_game_runner.py  test_game_suite_loader.py  test_integration.py  test_models.py  test_models_action_record.py  test_multi_episode.py  test_observation_mapper.py  test_payoff_evaluator.py  test_plugin_registration.py  test_round_payoffs.py  test_runner_action_records.py  test_stress_test.py  test_tournament.py  test_tournament_elo.py
ci-templates/: gitlab-ci.yml
dashboards/: atp-grafana-dashboard.json
demo/: .env.example  atp.config.yaml  compare_agents.py  steps.md
demo-game/: Containerfile.el-farol  compose.el-farol.yml
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.conf.template
docs/: 01-vision.md  02-requirements.md  03-architecture.md  04-protocol.md  05-evaluators.md  06-integration.md  07-roadmap.md  2026-06-13-r07-phase1-code-review-mvp.md  2026-07-12-rd-007-learning-event-design.md  README.md  architecture-diagram.html  atp-architecture.html  atp-auth-ratelimit-sdk.md  atp-issues-ownership-and-buffer.md  atp-mcp-server-for-games.md  atp-mcp-tournament-spec-patches.md  ci-cd.md  comparison.md  epam-demo-overview.md  game-theory-coverage-report.md  maestro-integration.md  performance.md  protocol-v1-spec.md  security.md
examples/: MCP_TESTING.md  demo_agent.py  loader_example.py  mcp_agent.py  mcp_simple_agent.py  mock_mcp_server.py  openai_agent.py  run_demo.sh  run_mcp_tests.sh  run_openai_demo.sh
game-environments/: README.md  coverage.json  pyproject.toml
game-environments/.hypothesis/constants/: 002846b539446ffd  01fc4ffbce77cf2f  0479720c2d643957  081e3ee11b7b4e13  0fb3f62d3af1f5e6  123c0bc846d3a4f7  16dfafa7afbaf11a  17e95c93db9dfcac  1d3d742efcd7ad6c  22e115d3a3396a95  2375d246f577f358  293e9a0b3011e6e7  29b4b6af4c8d2da4  40d8038ca0c734db  428becb5afec19e1  4e5fc07074676301  4e8a13c57475b938  52a7071abd3a89fa  52e3c85871882aee  5469dc294ae09bcb  5845770587b3bec3  5a5a618ed5fc2d7a  60c5878c6d77ee5d  617999ec9da46c01  64e8075bfbbc41a8  651d769a5cb8d31e  6800649b6bfb7df8  6836ccc47a89457c  685385c7a3f2515d  6a827ecfb5a5ace3  6a9b036211356d7b  6b3e12e95931ef40  6ca7e4e103f33fbe  6e25842af09753b0  7546cf617c427dfd  7a8e46f608e51256  7b7a947a5447a993  7e5f9b9c42705d10  8338e002d9d88a40  94617339ea4b74cb  (+22 more)
game-environments/game_envs/: __init__.py
game-environments/game_envs/analysis/: __init__.py  cooperation.py  exploitability.py  fairness.py  models.py  nash_solver.py  population.py
game-environments/game_envs/core/: __init__.py  action.py  communication.py  errors.py  game.py  history.py  state.py  strategy.py
game-environments/game_envs/games/: __init__.py  auction.py  battle_of_sexes.py  colonel_blotto.py  congestion.py  el_farol.py  prisoners_dilemma.py  public_goods.py  registry.py  stag_hunt.py
game-environments/game_envs/strategies/: __init__.py  auction_strategies.py  blotto_strategies.py  bos_strategies.py  congestion_strategies.py  el_farol_strategies.py  pd_strategies.py  pg_strategies.py  registry.py  stag_hunt_strategies.py
game-environments/tests/: conftest.py  test_action.py  test_action_properties.py  test_auction.py  test_battle_of_sexes.py  test_battle_of_sexes_service_methods.py  test_colonel_blotto.py  test_communication.py  test_congestion.py  test_cooperation.py  test_el_farol.py  test_exploitability.py  test_fairness.py  test_game.py  test_history.py  test_nash_solver.py  test_population.py  test_prisoners_dilemma.py  test_public_goods.py  test_public_goods_service_methods.py  test_registry.py  test_stag_hunt.py  test_stag_hunt_service_methods.py  test_state.py  test_strategy.py
game-environments/tests/test_strategies/: __init__.py  test_auction_strategies.py  test_blotto_strategies.py  test_congestion_strategies.py  test_pd_strategies.py  test_pg_strategies.py  test_registry.py
infra/: .gitignore  README.md  user-data.sh.tftpl
method/: CASE_GENERATOR.md  GLOSSARY.md  GLOSSARY.ru.md  METHODOLOGY.md  METHODOLOGY.ru.md  (+7 more)
(+1246 files in other folders)
