[project]
name = "atp-platform"
version = "0.1.0"
description = "Framework-agnostic platform for testing and evaluating AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "ruamel-yaml>=0.18",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "jsonschema>=4.26.0",
    "anthropic>=0.76.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.21",
    "greenlet>=3.3.1",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "prometheus-client>=0.24.1",
    "openpyxl>=3.1.5",
    "authlib>=1.6.6",
    "python3-saml>=1.16.0",
    "beautifulsoup4>=4.14.3",
    "spec-runner>=0.1.4",
]

[project.scripts]
atp = "atp.cli.main:main"

# Plugin entry points for adapters, evaluators, and reporters
[project.entry-points."atp.adapters"]
http = "atp.adapters.http:HTTPAdapter"
cli = "atp.adapters.cli:CLIAdapter"
container = "atp.adapters.container:ContainerAdapter"
langgraph = "atp.adapters.langgraph:LangGraphAdapter"
crewai = "atp.adapters.crewai:CrewAIAdapter"
autogen = "atp.adapters.autogen:AutoGenAdapter"
bedrock = "atp.adapters.bedrock:BedrockAdapter"
vertex = "atp.adapters.vertex:VertexAdapter"

[project.entry-points."atp.evaluators"]
artifact = "atp.evaluators.artifact:ArtifactEvaluator"
behavior = "atp.evaluators.behavior:BehaviorEvaluator"
code_exec = "atp.evaluators.code_exec:CodeExecEvaluator"
llm_judge = "atp.evaluators.llm_judge:LLMJudgeEvaluator"

[project.entry-points."atp.reporters"]
console = "atp.reporters.console:ConsoleReporter"
html = "atp.reporters.html_reporter:HTMLReporter"
json = "atp.reporters.json_reporter:JSONReporter"
junit = "atp.reporters.junit_reporter:JUnitReporter"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]
tui = [
    "rich>=13.0",
    "textual>=0.47.0",
]
bedrock = [
    "boto3>=1.42.39",
]
vertex = [
    "google-cloud-aiplatform>=1.135.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# HTML/JS template strings have longer lines for readability
"atp/reporters/html_reporter.py" = ["E501"]
"atp/dashboard/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
]

[tool.coverage.run]
source = ["atp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "atp/tui/*",  # TUI is optional, tested separately with [tui] extra
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "moto>=5.1.20",
    "pre-commit>=4.5.1",
    "pyrefly>=0.49.0",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "rich>=14.3.1",
    "ruff>=0.14.14",
    "spec-runner>=0.1.4",
    "textual>=7.5.0",
]
