[project]
name = "atp-platform"
version = "2.0.0"
description = "Framework-agnostic platform for testing and evaluating AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ATP Platform Contributors" }]
keywords = ["ai-agents", "testing", "evaluation", "game-theory", "framework-agnostic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "atp-core>=1.0.0",
    "atp-adapters>=1.0.0",
    "httpx>=0.27",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "rich>=13.0",
    "pillow>=12.1.1",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
    "python-dotenv>=1.2.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.0",
    "authlib>=1.6.9",
    "python-multipart>=0.0.22",
]

[project.scripts]
atp = "atp.cli.main:main"

# Plugin entry points for evaluators and reporters
# Adapter entry-points are in packages/atp-adapters/pyproject.toml
[project.entry-points."atp.evaluators"]
artifact = "atp.evaluators.artifact:ArtifactEvaluator"
behavior = "atp.evaluators.behavior:BehaviorEvaluator"
code_exec = "atp.evaluators.code_exec:CodeExecEvaluator"
factuality = "atp.evaluators.factuality:FactualityEvaluator"
filesystem = "atp.evaluators.filesystem:FilesystemEvaluator"
llm_judge = "atp.evaluators.llm_judge:LLMJudgeEvaluator"
performance = "atp.evaluators.performance:PerformanceEvaluator"
security = "atp.evaluators.security.evaluator:SecurityEvaluator"
style = "atp.evaluators.style:StyleEvaluator"
composite = "atp.evaluators.composite:CompositeEvaluator"

[project.entry-points."atp.reporters"]
console = "atp.reporters.console:ConsoleReporter"
html = "atp.reporters.html_reporter:HTMLReporter"
json = "atp.reporters.json_reporter:JSONReporter"
junit = "atp.reporters.junit_reporter:JUnitReporter"
game = "atp.reporters.game_reporter:GameReporter"

[project.urls]
Homepage = "https://github.com/atp-platform/atp-platform"
Repository = "https://github.com/atp-platform/atp-platform"
Documentation = "https://github.com/atp-platform/atp-platform"
Changelog = "https://github.com/atp-platform/atp-platform/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]
tui = [
    "rich>=13.0",
    "textual>=0.47.0",
]
cloud = [
    "atp-adapters[cloud]",
]
bedrock = [
    "atp-adapters[bedrock]",
]
vertex = [
    "atp-adapters[vertex]",
]
azure-openai = [
    "atp-adapters[azure-openai]",
]
dashboard = [
    "atp-dashboard>=1.0.0",
]
enterprise = [
    "atp-dashboard[enterprise]",
]
analytics = [
    "atp-dashboard[analytics]",
]
llm = [
    "anthropic>=0.76.0",
]
all = [
    "atp-adapters[cloud]",
    "atp-dashboard>=1.0.0",
    "atp-dashboard[enterprise]",
    "atp-dashboard[analytics]",
    "anthropic>=0.76.0",
    "rich>=13.0",
    "textual>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# HTML/JS template strings have longer lines for readability
"atp/reporters/html_reporter.py" = ["E501"]
# Alembic auto-generated migrations have long index creation lines
"migrations/*/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
]
markers = [
    "slow: tests that boot a real uvicorn + FastMCP SSE handshake, pull a container image, or otherwise depend on infrastructure flaky in shared CI runners (LABS-20/74). Excluded from the default ``test (3.12)`` coverage gate; run them with ``-m slow`` or in the dedicated e2e CI job.",
]

[tool.coverage.run]
source = ["atp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "atp/tui/*",  # TUI is optional, tested separately with [tui] extra
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pyrefly]
project-includes = [
    "atp/**/*.py",
]
project-excludes = [
    "atp-games/**",
    "game-environments/**",
    "tests/**",
    "examples/**",
]
ignore-missing-imports = [
    "fastapi",
    "fastapi.middleware.cors",
    "fastapi.responses",
    "fastapi.security",
    "fastapi.staticfiles",
    "fastapi.templating",
    "starlette",
    "starlette.middleware.base",
    "starlette.types",
    "uvicorn",
    "openai",
    "anthropic",
    "openpyxl",
    "openpyxl.styles",
    "autogen",
    "pyautogen",
    "crewai",
    "langgraph",
    "vertexai",
    "google",
    "boto3",
    "botocore",
    "xmlsec",
    "onelogin",
    "onelogin.saml2.auth",
    "onelogin.saml2.idp_metadata_parser",
    "onelogin.saml2.settings",
    "textual",
    "authlib",
    "authlib.jose",
    "authlib.jose.errors",
    "bcrypt",
    "jwt",
    "jwt.exceptions",
]

[tool.uv.workspace]
members = ["packages/*", "game-environments", "atp-games"]

[tool.uv.sources]
atp-core = { workspace = true }
atp-adapters = { workspace = true }
atp-dashboard = { workspace = true }
atp-games = { workspace = true }
game-environments = { workspace = true }
atp-platform-sdk = { workspace = true }

[dependency-groups]
dev = [
    "fpdf2>=2.8.5",
    "moto>=5.1.20",
    "werkzeug>=3.1.6",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyrefly>=0.49.0",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "rich>=14.3.1",
    "ruff>=0.14.14",
    "spec-runner>=0.1.4",
    "textual>=7.5.0",
    "alembic>=1.18.4",
    "uvicorn>=0.40.0",
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "anthropic>=0.76.0",
    "atp-games",
    "game-environments",
    "python3-saml>=1.16.0",
    "atp-platform-sdk",
    "atp-dashboard",
    "openpyxl>=3.1.5",
    "slowapi>=0.1.9",
]
