[project]
name = "atp-games"
version = "1.0.0"
description = "ATP plugin for game-theoretic agent evaluation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ATP Platform Contributors" }]
keywords = ["game-theory", "ai-agents", "atp", "evaluation", "tournament"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "game-environments>=1.0.0",
    "atp-platform>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/atp-platform/atp-platform"
Repository = "https://github.com/atp-platform/atp-platform"
Documentation = "https://github.com/atp-platform/atp-platform"

[project.entry-points."atp.plugins"]
game = "atp_games.plugin:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atp_games"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["atp_games"]

[tool.pyrefly]
project-includes = [
    "atp_games/**/*.py",
]

[tool.uv.sources]
atp-platform = { workspace = true }
game-environments = { workspace = true }

[dependency-groups]
dev = [
    "atp-platform",
    "game-environments",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
