[project]
name = "game-environments"
version = "1.0.0"
description = "Standalone game theory environments for agent evaluation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ATP Platform Contributors" }]
keywords = ["game-theory", "ai-agents", "evaluation", "prisoners-dilemma", "nash-equilibrium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/atp-platform/atp-platform"
Repository = "https://github.com/atp-platform/atp-platform"
Documentation = "https://github.com/atp-platform/atp-platform"

[project.optional-dependencies]
numpy = ["numpy>=1.26"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_envs"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["game_envs"]

[tool.pyrefly]
project-includes = [
    "game_envs/**/*.py",
]
python-interpreter = ".venv/bin/python"

[dependency-groups]
dev = [
    "hypothesis>=6.151.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
